[fl-cms] Fixed update properties; JSONEditor Dark mode

--- a/apps/fl-cms/src/styles/common.css
+++ b/apps/fl-cms/src/styles/common.css
@@ -104,7 +104,8 @@ a[role='button'] {
 
 input,
 select,
-textarea {
+textarea,
+.input {
     border-radius: 4px;
     border: 1px solid var(--color-bg-0);
     padding: 0.6em 1.2em;
@@ -113,9 +114,10 @@ textarea {
 
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+.input:focus,
+.input:has(*:focus) {
     border-color: var(--color-theme-1);
-    outline: none !important;
 }
 
 button {
